--- a/src/App.css
+++ b/src/App.css
@@ -29,30 +29,44 @@ body{
     width: 900px;
 }
 .resume{
-    rotate: 270deg;
+    display: flex;
+    justify-content: center;
+    width: 300px;
+    margin: auto;
+    margin-top: 75px;
     font-size: 50px;
-    width: 250px;
-    margin: 0;
     color: rgba(3, 16, 18, 0.772);
+    background: white;
+    opacity: 0.6;
+    border-radius: 20px;
 }
 .header img{
     float: left;
-    width: 250px;
-    height: 350px;
+    width: 350px;
+    height: 450px;
     border-radius: 20px;
     margin: 0 10px;
-    margin-right: 50px;
+    margin-right: 30px;
+    opacity: 0.9;
 }
 .text{
     justify-content: center;
     text-align: center;
-    width: 300px;
+    width: 500px;
     border-top: 1px solid rgb(42, 96, 82);
     border-bottom: 1px solid rgb(42, 96, 82);
-}
-.text p{
+    border-radius: 20px;
 }
 .container{
-    height: 80vh;
+    height: 70vh;
     margin-bottom: 20vh;
+}
+.about{
+    display: block;
+    margin: auto;
+    text-align: center;
+}
+.about-text{
+    font-size: 25px;
+    padding: 15px;
 }
