--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,7 @@ body{
     margin: auto;
     text-align: center;
     width: 900px;
+
 }
 .resume{
     display: flex;
@@ -65,7 +66,7 @@ body{
 }
 .about{
     display: block;
-    margin: auto;
+    margin: 90px auto;
     text-align: center;
 }
 .about-text{
@@ -93,8 +94,8 @@ body{
     justify-content: center;
 }
 .btn-links{
-    display: flex;
-    margin: 200px auto;
+    display: block;
+    margin: 50px auto;
 }
 .btn-links button{
     margin: auto 30px;
@@ -106,7 +107,65 @@ body{
     color: rgba(3, 16, 18, 0.772);
     cursor: pointer;
 }
+.github{
+    margin-bottom: 150px;
+    padding: 20px;
+    border-top: 1px solid rgb(42, 96, 82);
+    border-bottom: 1px solid rgb(42, 96, 82);
+    border-radius: 20px;
+}
+.github p{
+    font-size: 18px;
+    width: 400px;
+    margin: auto;
+    margin-bottom: 20px;
+}
+.linkedin{
+    padding: 20px;
+    border-top: 1px solid rgb(42, 96, 82);
+    border-bottom: 1px solid rgb(42, 96, 82);
+    border-radius: 20px;
+}
+.linkedin p{
+    font-size: 18px;
+    width: 400px;
+    margin-bottom: 20px;
+}
 .btn-links button:hover{
+    color: aliceblue;
+    background: #11434190;
+}
+.social{
+    text-align: center;
+    margin-top: 50px;
+}
+.socials{
+    width: 700px;
+    margin: auto;
+    padding-top: 200px;
+}
+.instagram-facebook{
+    border-top: 1px solid rgb(42, 96, 82);
+    border-bottom: 1px solid rgb(42, 96, 82);
+    border-radius: 20px;
+    padding: 20px;
+}
+.socials p{
+    font-size: 18px;
+    width: 450px;
+    margin: auto;
+    margin-bottom: 40px;
+}
+.socials button{
+    font-size: 20px;
+    padding: 20px 60px;
+    margin-right: 40px;
+    margin-left: 40px;
+    border: 0;
+    border-radius: 30px;
+    cursor: pointer;
+}
+.socials button:hover{
     color: aliceblue;
     background: #11434190;
 }
