--- a/src/App.css
+++ b/src/App.css
@@ -71,8 +71,8 @@ body{
 }
 .about-text{
     font-size: 25px;
-    padding: 15px;
-    margin: auto;
+    padding: 20px;
+    margin: auto;    
 }
 .education-text{
     font-size: 25px;
@@ -81,12 +81,34 @@ body{
 }
 .skills-text{
     font-size: 25px;
-    padding: 15px;
+    padding: 20px;
     margin: auto;
+}
+.skills-icons{
+    display: block;
+    margin: auto;
+    padding: 20px;
+    margin-bottom: 150px;
+}
+.first-row{
+    margin-bottom: 20px;
+}
+.second-row{
+    display: flex;
+    justify-content: space-between;
+    margin-right: 85px;
+    margin-left: 85px;
+    margin-bottom: 20px;
+}
+.third-row{
+    display: flex;
+    justify-content: center;
+    margin-right: 35px;
+    margin-left: 35px;
 }
 .languages-text{
     font-size: 25px;
-    padding: 15px;
+    padding: 20px;
     margin: auto;
 }
 .buttons{
