--- a/src/App.css
+++ b/src/App.css
@@ -137,10 +137,13 @@ body{
 }
 .conv-text{
     font-size: 20px;
-    padding: 30px;
+    padding: 20px;
     margin: auto;
     border-bottom: 0;
     padding-top: -300;
+}
+.conv-text p{
+    padding: 20px;
 }
 .conv-img{
     border-top: 0;
