--- a/src/App.css
+++ b/src/App.css
@@ -140,7 +140,8 @@ h2{
     border-radius: 20px;
 }
 .languages{
-    margin-top: 500px;
+    margin-top: 300px;
+    height: 300px;
 }
 .languages-text{
     font-size: 25px;
@@ -222,12 +223,13 @@ h2{
 }
 .social{
     text-align: center;
-    margin-top: 250px;
+    margin-top: 150px;
+    height: 400px;
 }
 .socials{
     width: 670px;
     margin: auto;
-    padding-top: 100px;
+    height: 300px;
 }
 .instagram-facebook{
     border-top: 1px solid rgb(42, 96, 82);
@@ -284,12 +286,12 @@ h2{
 .buttons{
     margin-bottom: 0;
 }
-@media screen and (max-height:770px) {
+@media screen and (max-height:750px) {
     .conv-img{
-        margin-top: 150px;
+        padding-top: 250px;
     }
-    .socials{
-        margin-top: 150px;
+    .social{
+        padding-top: 120px;
     }
     .buttons{
         margin-top: 150px;
