--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@ body{
     justify-content: center;
     margin: 50px auto;
     padding: 10px;
-    border-radius: 35px;
+    border-radius: 25px;
     box-shadow: 0 0 20px rgba(26, 26, 26, 0.1),
     0 0 40px rgba(26, 26, 26, 0.1),
     0 0 80px rgba(26, 26, 26, 0.1);
@@ -34,10 +34,12 @@ body{
     margin: auto;
     text-align: center;
     width: 700px;
+    height: 90vh;
 }
 .resume{
     display: flex;
     justify-content: center;
+    align-items: center;
     width: 300px;
     margin: auto;
     margin-top: 75px;
@@ -45,15 +47,20 @@ body{
     color: rgba(3, 16, 18, 0.772);
     background: white;
     opacity: 0.6;
-    border-radius: 20px;
+    border-radius: 15px;
+    margin-bottom: 50px;
 }
 .header img{
     float: left;
     width: 350px;
-    border-radius: 20px;
+    border-radius: 15px;
     margin: 0 10px;
     margin-right: 30px;
     opacity: 0.9;
+}
+.header img:hover{
+    cursor: pointer;
+    transform: scale(1.2);
 }
 .text{
     justify-content: center;
@@ -64,238 +71,14 @@ body{
     border-radius: 20px;
     padding: 30px;
 }
+.text:hover{
+    cursor: pointer;
+    transform: scale(1.2);
+}
 .container{
     height: 70vh;
     margin: auto;
     text-align: center;
-    margin-bottom: 350px;
-}
-.about{
-    display: block;
-    margin: 90px auto;
-    text-align: center;
-}
-h1{
-    padding-bottom: 10px;
-}
-h2{
-    padding-bottom: 10px;
-}
-.about-text{
-    font-size: 25px;
-    padding: 20px;
-    margin: auto;    
-}
-.education{
-    margin-bottom: 350px;
-    height: 80vh;
-}
-.education-text{
-    font-size: 25px;
-    padding: 15px;
-    margin: auto;
-}
-.education-text img{
-    width: 400px;
-}
-.course{
-    margin-bottom: 350px;
-    height: 80vh;
-}
-.course-text{
-    padding: 15px;
-    margin: auto;
-}
-.course img{
-    width: 400px;
-}
-.course-text p{
-    font-size: 20px;
-    padding: 20px;
-    margin: auto;
-    border-bottom: 0;
-    padding-top: -300;
-}
-.course-text h3{
-    font-size: 1.4rem;
-}
-.conv-text{
-    font-size: 20px;
-    margin: auto;
-    border-bottom: 0;
-    padding-top: -300;
-}
-.conv-img{
-    border-top: 0;
-    padding: 30px;
-    margin: auto;
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: 20px;
-}
-.conv-img img{
-    display: flex;
-    width: 180px;
-    margin: 5px;
-    border-radius: 20px;
-}
-.languages{
-    margin-top: 300px;
-    height: 300px;
-}
-.languages-text{
-    font-size: 25px;
-    padding: 20px;
-    margin: auto;
-}
-.buttons{
-    display: flex;
-    justify-content: center;
-    height: 110vh;
-}
-.btn-links{
-    display: block;
-    margin: 50px auto;
-}
-.btn-links button{
-    margin: auto 30px;
-    padding: 20px 60px;
-    font-size: 20px;
-    border-radius: 30px;
-    border: 0;
-    opacity: 0.9;
-    color: rgba(3, 16, 18, 0.772);
-    cursor: pointer;
-}
-.hobbies-text{
-    font-size: 25px;
-    padding: 20px;
-    margin: auto;
-}
-.hobbies-text img{
-    width: 200px;
-    height: 280px;
-    margin-left: 10px;
-    margin-right: 10px;
-    border-radius: 20px;
-    margin-top: 30px;
-}
-.github{
-    margin-bottom: 100px;
-    padding: 20px;
-    border-top: 1px solid rgb(42, 96, 82);
-    border-bottom: 1px solid rgb(42, 96, 82);
-    border-radius: 20px;
-}
-.github p{
-    font-size: 18px;
-    width: 400px;
-    margin: auto;
-    margin-bottom: 20px;
-}
-.linkedin{
-    padding: 20px;
-    margin-bottom: 100px;
-    border-top: 1px solid rgb(42, 96, 82);
-    border-bottom: 1px solid rgb(42, 96, 82);
-    border-radius: 20px;
-}
-.linkedin p{
-    font-size: 18px;
-    width: 400px;
-    margin-bottom: 20px;
-}
-.mail{
-    margin-bottom: 50px;
-    padding: 20px;
-    border-top: 1px solid rgb(42, 96, 82);
-    border-bottom: 1px solid rgb(42, 96, 82);
-    border-radius: 20px;
-}
-.mail p{
-    font-size: 18px;
-    width: 400px;
-    margin-bottom: 20px;
-}
-.btn-links button:hover{
-    color: aliceblue;
-    background: #11434190;
-}
-.social{
-    text-align: center;
-    margin-top: 150px;
-    height: 400px;
-}
-.socials{
-    width: 670px;
-    margin: auto;
-    height: 300px;
-}
-.instagram-facebook{
-    border-top: 1px solid rgb(42, 96, 82);
-    border-bottom: 1px solid rgb(42, 96, 82);
-    border-radius: 20px;
-    padding: 20px;
-    padding-bottom: 83px;
-}
-.socials p{
-    font-size: 18px;
-    width: 450px;
-    margin: auto;
-    margin-bottom: 40px;
-}
-.socials button{
-    font-size: 20px;
-    padding: 20px 60px;
-    margin-right: 40px;
-    margin-left: 40px;
-    border: 0;
-    border-radius: 30px;
-    cursor: pointer;
-    color: rgba(3, 16, 18, 0.772);
-}
-.socials button:hover{
-    color: aliceblue;
-    background: #11434190;
-}
-.instagram{
-    display: flex;
-    justify-content: center;
-    width: 50%;
-    float: left;
-}
-.facebook{
-    display: flex;
-    justify-content: center;
-    width: 50%;
-    float: right;
-}
-.container{
-    margin-bottom: 400px;
-}
-.social{
-    margin-bottom: 0;
-    padding-top: 0;
-}
-.conv{
-    margin-bottom: 0;
-}
-.education{
-    margin-bottom: 450px;
-}
-.buttons{
-    margin-bottom: 0;
-}
-@media screen and (max-height:750px) {
-    .conv-img{
-        padding-top: 250px;
-    }
-    .social{
-        padding-top: 120px;
-    }
-    .buttons{
-        margin-top: 150px;
-    }
 }
 @media screen and (max-width:600px) {
     *{
@@ -306,122 +89,62 @@ h2{
     .main{
         margin: auto;
         width: 100%;
+        border: 0;
+        border-radius: 0;
     }
     .resume{
-        margin-bottom: 100px;
+        margin-bottom: 40px;
+        width: 60%;
+        font-size: 35px;
     }
     .header{
         display: grid;
         grid-template-columns: auto;
         justify-content: center;
         align-items: center;
-        height: 100vh;
-        width: 400px;
+        height: 110vh;
+        width: 70%;
         margin: auto;
+        margin-bottom: 200px;
     }
     .header img{
-        margin-bottom: 150px;
+        width: 80%;
+        margin: 0;
         margin: auto;
+        margin-bottom: 100px;
+        margin-left: 45px;
     }
     .text{
-        width: 300px;
-        margin: auto;
-        margin-bottom: 100px;
-    }
-    .education-text{
-        margin-bottom: 100px;
-    }
-    .education-text img{
-        width: 250px;
-    }
-    .course{
-        margin-top: 100px;
-    }
-    .course-text img{
-        width: 250px;
-    }
-    .conv h1{
-        width: 300px;
-    }
-    .conv-img img{
-        width: 250px;
-    }
-    .conv-img{
-        margin-top: 600px;
-    }
-    .github{
-        width: 300px;
-        margin: auto;
-        margin-bottom: 50px;
-        margin-top: 100px;
-    }
-    .github p{
-        width: 250px;
-        font-size: 13px;
-    }
-    .github button{
-        padding: 10px 30px;
-    }
-    .linkedin{
-        width: 300px;
-        margin: auto;
-        margin-bottom: 50px;
-        margin-top: 100px;
-    }
-    .linkedin p{
-        width: 250px;
-        font-size: 13px;
-    }
-    .linkedin button{
-        padding: 10px 30px;
-    }
-    .mail{
-        width: 300px;
-        margin: auto;
-        margin-bottom: 50px;
-        margin-top: 100px;
-    }
-    .mail p{
-        width: 250px;
-        font-size: 13px;
-    }
-    .mail button{
-        padding: 10px 30px;
-    }
-    .social{
-        display: block;
-    }
-    .socials{
-        display: block;
-        width: 300px;
-        padding-top: 0;
-    }
-    .instagram-facebook{
-        display: block;
-        width: 300px;
-        margin: auto;
-        height: 300px;
-    }
-    .instagram-facebook p{
-        font-size: 13px;
-        width: 250px;
-    }
-    .instagram{
-        width: 250px;
+        width: 80%;
         margin: auto;
     }
-    .facebook{
-        width: 250px;
+}
+@media screen and (max-width:480px) {
+    *{
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+    .main{
+        width: 100%;
         margin: auto;
     }
-    .instagram button{
-        padding: 10px 30px;
-        margin-bottom: 50px;
-        width: 200px;
+    .resume{
+        margin-bottom: 150px;
+        width: 60%;
+        font-size: 35px;
     }
-    .facebook button{
-        padding: 10px 30px;
-        width: 200px;
-        margin-left: 20px;
+    .header{
+        width: 70%;
+        margin-bottom: 150px;
+        height: 100vh;
+    }
+    .header img{
+        margin-left: 7%;
+        width: 90%;
+    }
+    .text{
+        font-size: 25px;
+        width: 90%;
     }
 }
