--- a/src/Components/Events/Event.css
+++ b/src/Components/Events/Event.css
@@ -51,7 +51,10 @@
     .container-conv{
         width: 70%;
         margin-bottom: 150px;
-        height: 350vh;
+        height: 320vh;
+    }
+    .text-conv{
+        padding: 30px 0;
     }
     .text-conv-img{
         display: gird;
@@ -72,6 +75,6 @@
     .container-conv{
         width: 80%;
         margin-bottom: 150px;
-        height: 380vh;
+        height: 330vh;
     }
 }
