--- a/src/App.css
+++ b/src/App.css
@@ -80,6 +80,21 @@ body{
     margin: auto;
     text-align: center;
 }
+@keyframes appear{
+    from{
+        opacity: 0;
+        scale: 0;
+    }
+    to{
+        opacity: 1;
+        scale: 1;
+    }
+}
+.block {
+    animation: appear linear;
+    animation-timeline: view();
+    animation-range: entry 0% cover 40%;
+}
 @media screen and (max-width:600px) {
     *{
         margin: 0;
