--- a/src/App.css
+++ b/src/App.css
@@ -150,6 +150,9 @@ a{
         width: 80%;
         margin: auto;
     }
+    .div{
+        height: fit-content;
+    }
 }
 @media screen and (max-width:480px) {
     *{
@@ -179,9 +182,15 @@ a{
         font-size: 25px;
         width: 90%;
     }
+    .div{
+        height: fit-content;
+    }
 }
 @media screen and (max-width:380px) {
     .resume{
         margin-bottom: 100px;
+    }
+    .div{
+        height: fit-content;
     }
 }
