--- a/src/Components/Course/Course.css
+++ b/src/Components/Course/Course.css
@@ -69,7 +69,7 @@
     .container-course{
         width: 80%;
         margin-bottom: 150px;
-        height: 130vh;
+        height: fit-content;
     }
     .course-text{
         width: 90%;
