--- a/src/Components/Events/Event.css
+++ b/src/Components/Events/Event.css
@@ -51,7 +51,7 @@
     .container-conv{
         width: 70%;
         margin-bottom: 150px;
-        height: 340vh;
+        height: fit-content;
     }
     .text-conv{
         padding: 30px 0;
@@ -75,6 +75,6 @@
     .container-conv{
         width: 80%;
         margin-bottom: 150px;
-        height: 390vh;
+        height: fit-content;
     }
 }
